# alcotrade

./: .gitattributes  .gitignore  README.md  demoTradingBot.py
cpp-code/: CMakeLists.txt  README.md  arm_neon_crazy_shit  main.cc
cpp-code/include/: TradingWebSocketClient.hpp  candle_data.hpp  consts.hpp  events.hpp  orderbook_level.hpp  random_forest.hpp
cpp-code/src/: events_impl.cc  random_forest.cc
jupyter-research/: README.md  dataframe.csv  ml_pandas.ipynb  requirements.txt  trading_log.json
py-code/: demoNewBot.py
